<resources>
    <string name="app_name" translatable="false">MyLastFM</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Navigation Drawer Header -->
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="nav_title">MyLastFM</string>
    <string name="nav_email" translatable="false">fakeemail@mylastfm.com</string>
    <string name="app_icon_desc">MyLastFM</string>

    <!-- Navigation Drawer Options -->
    <string name="nav_browse">Browse</string>
    <string name="nav_browse_top">Top Track Charts</string>
    <string name="nav_browse_country">Country Top Chart</string>
    <string name="nav_search">Search</string>
    <string name="nav_playlist">My Playlist</string>

    <!-- MainActivity -->
    <string name="main_alert_title">Clear My Playlist</string>
    <string name="main_alert_message">Are you sure you want to clear My Playlist?</string>
    <string name="main_alert_cleared">Playlist Cleared</string>

    <!-- TrackListFragment -->
    <string name="track_list_name" translatable="false">TrackListFragment</string>
    <string name="empty" translatable="false"> </string>
    <string name="delete_button">Delete Track from Playlist</string>
    <string name="error_results">No Track Results Available.</string>
    <string name="error_connection">No Track Results Available. The Network is not available to fetch track data.</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="pref_start_key" translatable="false">pref_startFragment</string>
    <string name="pref_startScreen">Select Start Screen</string>
    <string name="pref_clear_all">Clear My Playlist</string>

    <!-- Search Layout -->
    <string name="search_frag_name">Search LastFM</string>
    <string name="search_name">Search Parameters</string>
    <string name="search_tag">By Tag</string>
    <string name="search_artist">By Artist</string>
    <string name="search_track">By Track</string>
    <string name="search_artalb">By Artist/Album</string>
    <string name="search_button">Initiate Search</string>
    <string name="input_one_hint">Tag/Artist/Track</string>
    <string name="input_two_hint">Album</string>
    <string name="search_please">Please enter a search query.</string>

    <!-- Detail Track Activity -->
    <string name="title_activity_detail_track">DetailTrackActivity</string>
    <string name="detail_frag_name">Track Detail</string>
    <string name="format_artist">Artist: %1$s</string>
    <string name="format_album">Album: %1$s</string>
    <string name="detail_disconnected">Network not available. Details may be incomplete.</string>
    <string name="band_button">Artist Page on Last.FM</string>
    <string name="action_add">Add Track</string>

    <!-- Utility -->
    <string name="band_url_format" translatable="false">http://www.last.fm/music/%1$s</string>

    <!-- ContentProvider -->
    <string name="content_authority" translatable="false">com.fract.nano.williamyoung.mylastfm</string>

    <!-- Widget -->
    <string name="widget_track">MyLastFM Track Widget</string>
    <string name="widget_cover_desc">%1$s Cover Art</string>
    <string name="widget_open">Open in MyLastFM</string>
</resources>